# DiscordStatusCB

./: CONTRIBUTING.md  LICENSE  README.md
rustbot/: Cargo.toml  README.md
rustbot/src/: lib.rs
rustbot/src/commands/: admin.rs  ban.rs  handler.rs  kick.rs  list.rs  mod.rs  psay.rs  restart.rs  say.rs  steamid.rs  unban.rs  xp.rs
rustbot/src/components/: handler.rs  mod.rs  playerlist.rs
scripts/: discord.gs
scripts/dukeofleet/: README.md  compilersettings.ini  server.cfg
scripts/dukeofleet/assets/: 096ambi.ogg.packed  MTFAnnounc.ogg.packed  infected.ogg.packed
scripts/dukeofleet/client/: README.md
scripts/dukeofleet/server/: constants.gs  database.gs  discord.gs  externalLib.gs  gameplayEvals.gs  gameplayFunctions.gs  main.gs  mtf.gs  network.gs
scripts/dukeofleet/server/callback/: OnGameplayEvents.gs  OnNetworkingEvents.gs  OnPlayerEvents.gs  OnSystemEvents.gs
scripts/dukeofleet/shared/: sharedNetwork.gs  sharedUtility.gs
scripts/dukeofleet/sql/: prod.sql
scripts/koradox-wendybreach/: README.md  client.gs  dukeofleet_leaderboard.gs  koradox_leaderboard.gs  server.gs
scripts/koradox-wendybreach/MySQL/: Settings.ini  leaderboard.sql
scripts/original_script/: discord.gs  str_util.gs
