[package]
name = "discord_bot"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build]
target = "i686-pc-windows-msvc"

[dependencies]
serenity = "0.11.5"
futures = { version = "0.3" }
tokio = { version = "1.12.0", features = ["full"] }
rustrict = "0.7.8"
lazy_static = "1.4.0"

[lib]
crate-type = ["cdylib"]